feat: agregar estructura de paquetes y build.xml